--- a/USCISTracker/USCISTracker.Data/USCISTracker.Data.csproj
+++ b/USCISTracker/USCISTracker.Data/USCISTracker.Data.csproj
@@ -107,6 +107,8 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ICase.cs" />
+    <Compile Include="ICaseReceiptNumber.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Properties\USCISTracker.Data.rd.xml" />
   </ItemGroup>
