--- a/USCISTracker/USCISTracker.Data/project.json
+++ b/USCISTracker/USCISTracker.Data/project.json
@@ -1,5 +1,6 @@
 ﻿{
   "dependencies": {
+    "AngleSharp": "0.9.6",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.1.0"
   },
   "frameworks": {
