--- a/USCISTracker/USCISTracker/USCISTracker.csproj
+++ b/USCISTracker/USCISTracker/USCISTracker.csproj
@@ -134,6 +134,10 @@
       <Project>{d75f6e2f-c62c-4a71-9482-82c4019aeaf1}</Project>
       <Name>USCISTracker.API</Name>
     </ProjectReference>
+    <ProjectReference Include="..\USCISTracker.Data\USCISTracker.Data.csproj">
+      <Project>{4fb57cf8-9175-4a55-8d37-35cc265a027b}</Project>
+      <Name>USCISTracker.Data</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
