Changed of mind, bring back interfaces

--- a/USCISTracker/USCISTracker.Data/USCISTracker.Data.csproj
+++ b/USCISTracker/USCISTracker.Data/USCISTracker.Data.csproj
@@ -109,6 +109,8 @@
   <ItemGroup>
     <Compile Include="Case.cs" />
     <Compile Include="CaseReceiptNumber.cs" />
+    <Compile Include="ICaseReceiptNumber.cs" />
+    <Compile Include="ISequentialReceiptNumber.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Properties\USCISTracker.Data.rd.xml" />
   </ItemGroup>
