Bring back Interface for Case

--- a/USCISTracker/USCISTracker.Data/USCISTracker.Data.csproj
+++ b/USCISTracker/USCISTracker.Data/USCISTracker.Data.csproj
@@ -109,6 +109,7 @@
   <ItemGroup>
     <Compile Include="Case.cs" />
     <Compile Include="CaseReceiptNumber.cs" />
+    <Compile Include="ICase.cs" />
     <Compile Include="ICaseReceiptNumber.cs" />
     <Compile Include="ISequentialReceiptNumber.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
