Master Detail page is coming up

--- a/USCISTracker/USCISTracker/USCISTracker.csproj
+++ b/USCISTracker/USCISTracker/USCISTracker.csproj
@@ -95,6 +95,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Converters\IReceiptNumberToString.cs" />
     <Compile Include="ViewModels\CaseViewModel.cs" />
     <Compile Include="Views\DetailPage.xaml.cs">
       <DependentUpon>DetailPage.xaml</DependentUpon>
