Build a CaseFactory to generate cases

--- a/USCISTracker/USCISTracker.Data/USCISTracker.Data.csproj
+++ b/USCISTracker/USCISTracker.Data/USCISTracker.Data.csproj
@@ -108,6 +108,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Case.cs" />
+    <Compile Include="CaseFactory.cs" />
     <Compile Include="CaseReceiptNumber.cs" />
     <Compile Include="ICase.cs" />
     <Compile Include="ICaseReceiptNumber.cs" />
