--- a/USCISTracker/USCISTracker.Data/project.json
+++ b/USCISTracker/USCISTracker.Data/project.json
@@ -1,7 +1,8 @@
 ﻿{
   "dependencies": {
     "AngleSharp": "0.9.6",
-    "Microsoft.NETCore.UniversalWindowsPlatform": "5.1.0"
+    "Microsoft.NETCore.UniversalWindowsPlatform": "5.2.2",
+    "Newtonsoft.Json": "9.0.1"
   },
   "frameworks": {
     "uap10.0": {}
