--- a/USCISTracker/USCISTracker/USCISTracker.csproj
+++ b/USCISTracker/USCISTracker/USCISTracker.csproj
@@ -134,6 +134,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets\Square150x150Logo.scale-400.png" />
+    <Content Include="Assets\Square310x310Logo.scale-200.png" />
     <Content Include="Assets\Square71x71Logo.scale-400.png" />
     <Content Include="Assets\StoreLogo.scale-100.png" />
     <Content Include="Assets\StoreLogo.scale-400.png" />
