--- a/USCISTracker/USCISTracker/project.json
+++ b/USCISTracker/USCISTracker/project.json
@@ -3,6 +3,7 @@
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.2.2",
     "Microsoft.Xaml.Behaviors.Uwp.Managed": "1.1.0",
     "Newtonsoft.Json": "9.0.1",
+    "NotificationsExtensions.Win10": "14332.0.2",
     "Template10": "1.1.11"
   },
   "frameworks": {
