--- a/USCISTracker/USCISTracker.Services/USCISTracker.Services.csproj
+++ b/USCISTracker/USCISTracker.Services/USCISTracker.Services.csproj
@@ -119,9 +119,7 @@
       <Name>USCISTracker.Data</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="BackgroundServices\NewFolder1\" />
-  </ItemGroup>
+  <ItemGroup />
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
