Add in the ServiceCompletebackgroundTask to handle app updates

--- a/USCISTracker/USCISTracker.Background/USCISTracker.Background.csproj
+++ b/USCISTracker/USCISTracker.Background/USCISTracker.Background.csproj
@@ -110,6 +110,7 @@
   <ItemGroup>
     <Compile Include="CaseUpdateBackgroundTask.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ServiceCompletedBackgroundTask.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\USCISTracker.API\USCISTracker.API.csproj">
