--- a/USCISTracker/USCISTracker.Background/USCISTracker.Background.csproj
+++ b/USCISTracker/USCISTracker.Background/USCISTracker.Background.csproj
@@ -111,6 +111,7 @@
     <Compile Include="CaseUpdateBackgroundTask.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceCompletedBackgroundTask.cs" />
+    <Compile Include="TileUpdateBackgroundTask.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\USCISTracker.API\USCISTracker.API.csproj">
@@ -120,6 +121,10 @@
     <ProjectReference Include="..\USCISTracker.Data\USCISTracker.Data.csproj">
       <Project>{4fb57cf8-9175-4a55-8d37-35cc265a027b}</Project>
       <Name>USCISTracker.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\USCISTracker.Services\USCISTracker.Services.csproj">
+      <Project>{36c9ebc1-15f3-45ad-9dbf-e11c0cd1e43d}</Project>
+      <Name>USCISTracker.Services</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
