--- a/USCISTracker/USCISTracker.Services/USCISTracker.Services.csproj
+++ b/USCISTracker/USCISTracker.Services/USCISTracker.Services.csproj
@@ -111,6 +111,7 @@
     <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TileServices\TileService.cs" />
+    <Compile Include="ToastServices\ToastService.cs" />
     <EmbeddedResource Include="Properties\USCISTracker.Services.rd.xml" />
   </ItemGroup>
   <ItemGroup>
